[package]
name = "toffoo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.26.0"
vulkano-win = "0.26.0"
vulkano-shaders = "0.26.0" 

winit = "0.25"

cgmath = "0.18"
png = "0.17"
time = "0.3"
serde = { version = "1.0", features = ["derive"] }
ron = "0.6"
rand = "0.8.4"
